--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,15 @@
-[tool.isort]
-profile="black"
-
-
 [tool.mypy]
 files = "./wm_what/**/*.py"
 ignore_missing_imports = true
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 120
+include_trailing_comma = true
+
+[tool.black]
+line_length = 120
+
+[tool.coverage.run]
+include = ["*/wm-what/*"]
