Adapt for toolforge runs
Added missing dependency too.

Signed-off-by: David Caro <dcaro@wikimedia.org>

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flask-login
 flask-marshmallow
 flask-restful
 flask-sqlalchemy
+Flask-Markdown
 marshmallow-sqlalchemy
 requests
 social-auth-app-flask
